--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/jadestrong/SinaMicroblog-grab#readme",
   "dependencies": {
     "async": "^2.0.0-rc.6",
-    "request": "^2.73.0"
+    "request": "^2.73.0",
+    "tough-cookie-filestore": "0.0.1"
   }
 }
